[gd_scene load_steps=4 format=3 uid="uid://c5cjedy2ua87a"]

[ext_resource type="Script" path="res://scripts/card_hand.gd" id="1_nl3xp"]
[ext_resource type="PackedScene" uid="uid://c7isv5qiwegkf" path="res://scenes/card_template.tscn" id="1_s0mw8"]
[ext_resource type="Texture2D" uid="uid://c4ceu36363cu" path="res://sprites/PLACEHOLDER_fonts/Icons_Placeholder/Briefcase.png" id="2_c55eb"]

[node name="card_hand" type="Node2D"]
script = ExtResource("1_nl3xp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="card_template" parent="CanvasLayer" instance=ExtResource("1_s0mw8")]
visible = false
cardName = "name 1"
cardDescription = "this is a test of the description box"
cost_money = 45
cost_energy = 6
cost_time = 0.5

[node name="card_template2" parent="CanvasLayer" node_paths=PackedStringArray("cardImage") instance=ExtResource("1_s0mw8")]
visible = false
position = Vector2(113, 180)
cardName = "name 2"
cardDescription = "This shit also testing. Lets see just how far I can strecth this text out for. I feel like it has to have passed the box by this point, but idk. Maybe it'll surprise me. Hopefully it doesn't break it somehow"
cost_money = 1568
cost_energy = 44
cost_time = 3.0
cardImage = NodePath("../../Briefcase")

[node name="Spawn" type="Node2D" parent="CanvasLayer"]
position = Vector2(56, 27)

[node name="Briefcase" type="Sprite2D" parent="."]
visible = false
position = Vector2(-126, 52)
texture = ExtResource("2_c55eb")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Create card 1"

[node name="Button2" type="Button" parent="."]
offset_top = 40.0
offset_right = 109.0
offset_bottom = 71.0
text = "create card 2"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
